fix: input sizing on mobile

--- a/src/styles/topbar.styl
+++ b/src/styles/topbar.styl
@@ -42,6 +42,7 @@
 
   input[type=text]
     padding 0.4em 0.3em 0.3em 0.4em
+    max-width 100%
 
   @media (max-width: (768/basefont)rem)
       font-size(20px)
